[FIX] web, calendar: many2many avatar-tags field alignment
Prior to this commit the avatar status element was touching the badge
border.

task-2579123

--- a/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
+++ b/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
@@ -161,10 +161,6 @@ $toast-font-size: $font-size-base !default;
 $toast-background-color: rgba($white, .7) !default;
 $toast-header-background-color: $toast-background-color !default;
 
-// Badges
-
-$badge-font-weight: normal !default;
-
 // Modals
 
 // Padding applied to the modal body
